Added Java 8 support